--- a/about.html
+++ b/about.html
@@ -3,15 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <title>H-Thai-ML</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
-    <!-- ABOUT PAGE -->
-    <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img src="./assets/images/about.jpg" alt="About"/>
+    
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+        <ul>
+            <li>Pasadena, CA</li>
+            <li>Chicago, IL</li>
+            <li>Philadelphia, PA</li>
+            <li>San Francisco, CA</li>
+        </ul>
+        <h2>Origin Story</h2>
+        <img src="./assets/images/about.jpg" alt="About" />
+        <p>It began when my father moved to California and had a passion for cooking Thai 
+            food. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean 
+            consectetur cursus augue, nec semper ipsum malesuada at. Nulla vehicula
+            est non accumsan tincidunt.</p>        
     </main>
 </body>
 </html>
