--- a/index.html
+++ b/index.html
@@ -7,12 +7,42 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
-    <!-- HOME PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
-    <main>
-        <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
-    </main>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div id="banner">
+        <img src="assets/images/banner.png" alt="Banner" height="100px" width="100px";>
+    </div>
+
+<main>
+    <h1>H-Thai-ML</h1>
+    <H2>We'll format your meal times!</H2>
+    <div class="service">
+        <h3>Dine-In</h3>
+    </div>
+    <div class="service">
+        <h3>Take Out</h3>
+    </div>
+    <div class="service">
+        <h3>Delivery</h3>
+    </div>
+    <h2>Come get Thai'd up!</h2>
+    <img src="assets/images/table-in-restaurant.jpg" alt="Table in Restaurant"
+         height: 500px;
+         width: 450px;>
+</main>
 </body>
 </html>
